Focus the first input on initial load.

--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -177,6 +177,7 @@
             })
 
             $("#attributesTable").attr("style", "width:100%")
+            $("input[tabindex = '1']").focus()
 
             $("#buttonAttributesSaveAll").on("click", function()
             {
