--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -324,6 +324,7 @@ Event Frame Dashboard
 
             $("#childEventFramesTable").attr("style", "width:100%")
             $("#attributesTable").attr("style", "width:100%")
+            $("input[tabindex = '1']").focus()
             $("#eventFrameNotesTable").attr("style", "width:100%")
 
             $("#buttonAttributesSaveAll").on("click", function()
