--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -144,11 +144,16 @@ Data Entry - Elements
                             <td>{{ child.TagAreaId is not none | yesNo() }}</td>
                             <td>{{ child.Area.Name }}</td>
                             {% if current_user.isAdministrator() %}
-                                <td><a class = "btn btn-default" title = "Associate Attributes with Tags"
-                                    href = "{{ url_for("elementAttributes.listElementAttributes", elementId = child.ElementId) }}">
-                                    <span class = "glyphicon glyphicon-link"></span></a></td>
-                                <td><a class = "btn btn-default" title = "Copy" href = "{{ url_for("elements.copyElement", elementId = child.ElementId) }}">
-                                    <span class = "glyphicon glyphicon-copy"></span></a></td>
+                                {% if child.TagAreaId is none %}
+                                    <td><a class = "btn btn-default" title = "Associate Attributes with Tags"
+                                        href = "{{ url_for("elementAttributes.listElementAttributes", elementId = child.ElementId) }}">
+                                        <span class = "glyphicon glyphicon-link"></span></a></td>
+                                    <td><a class = "btn btn-default" title = "Copy" href = "{{ url_for("elements.copyElement", elementId = child.ElementId) }}">
+                                        <span class = "glyphicon glyphicon-copy"></span></a></td>
+                                {% else %}
+                                    <td></td>
+                                    <td></td>
+                                {% endif %}
                                 <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("elements.editElement", elementId = child.ElementId) }}">
                                     <span class = "glyphicon glyphicon-edit"></span></a></td>
                                 <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("elements.deleteElement", elementId = child.ElementId) }}",
