Notifications interval from .env.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -146,7 +146,7 @@
                             since = notifications[i].UnixTimestamp
                         }
                     })
-                }, 10000)
+                }, {{ config["NOTIFICATIONS_INTERVAL_IN_MILLISECONDS"] }})
             })
         {% endif %}
 
