--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -64,7 +64,7 @@ Event Frame Dashboard
                 </tr>
             </thead>
             <tbody>
-                {% for eventFrame in eventFrame.EventFrames %}
+                {% for eventFrame in eventFrame.ChildEventFrames %}
                     <tr>
                         <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.dashboard",
                             eventFrameId = eventFrame.EventFrameId,) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
