--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -2,6 +2,11 @@
 
 {% extends "base.html" %}
 
+{% block metas %}
+<meta charset = "UTF-8">
+<meta name = "google" content = "notranslate">
+{% endblock %}
+
 {% block title %}
 Import {{ importing }}
 {% endblock %}
